# vendoor-backend

./: .gitignore  codegen.ts  codegen.yml  config.py  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: __init__.py  config.py  main.py  settings.py
app/routes/: users.py
app/users/: models.py  router.py
graphql/: definitions.ts  generate.ts  json.scalar.ts  schema.ts
migrations/models/: 2_20250508044408_None.py  3_20250508044507_add_full_name.py  3_20250508213153_add_email_and_password.py
prisma/: schema.prisma  seed.ts
prisma/client/: edge.js  index-browser.js  index.d.ts  index.js  package.json  schema.prisma  wasm.js
src/: app.module.ts  auth.ts  config.ts  environment.ts  global-exception.filter.ts  graphql.ts  main.ts  server.ts  utils.ts
src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  auth.types.ts  role.decorator.ts  role.guard.ts
src/business/: business.controller.ts  business.graphql  business.module.ts  business.resolver.ts  business.service.ts  business.types.ts
src/businesses/: businesses.controller.ts  businesses.dto.ts  businesses.module.ts  businesses.service.ts  businesses.types.ts
src/customer/: customer.controller.ts  customer.service.ts  customer.types.ts
src/customers/: customers.agent.ts  customers.controller.ts  customers.dto.ts  customers.intents.ts  customers.module.ts  customers.service.ts  customers.types.ts  mcp.ts
src/entities/: business-chat.entity.ts  business-owner.entity.ts  business.entity.ts  customer-chat.entity.ts  (+8 more)
(+155 files in other folders)
